--- a/androidApp/src/main/res/values/strings.xml
+++ b/androidApp/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="title_activity_main2">MainActivity2</string>
+    <string name="mark_as_completed">Mark as Completed</string>
+    <string name="delete_task">Delete Task</string>
 </resources>
